--- a/frontend/index.html
+++ b/frontend/index.html
@@ -625,17 +625,24 @@
             </div>
           </div>
 
-          <!-- Troque o href pelo seu link de pagamento ou WhatsApp -->
-          <a href="#"
-             class="cta-button">
+          <!-- BOTÃO HOTMART -->
+          <a href="https://go.hotmart.com/V103285397M"
+             class="cta-button"
+             target="_blank"
+             rel="noopener noreferrer">
             <span class="icon">💳</span>
             <span>Quero contratar por R$ 200,00 / ano</span>
           </a>
 
           <p class="cta-secondary">
-            Prefere tirar dúvidas antes?  
-            <!-- Substitua pelo seu WhatsApp -->
-            Chame no <a href="#">WhatsApp</a> e fale com Eng. Edson.
+            Prefere tirar dúvidas antes?<br>
+            Chame no
+            <a href="https://wa.me/5511977198220"
+               target="_blank"
+               rel="noopener noreferrer">
+              WhatsApp
+            </a>
+            e fale com Eng. Edson.
           </p>
         </div>
       </aside>
